# AoC-2025

./: pyproject.toml
day1/: main.py
day2/: main.py
day3/: main.py
utils/: utils.py
